frontend/src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root{
    --overlay: #03a9fa;
    font-family: 'Poppins', sans-serif;
}

/* .showcase {
    transition: .5s;
}


.swiper {
    padding: 32px;
}

.swiper-slide {
    display: flex;
    justify-content: center;
}

.swiper-pagination-bullet-active {
    background-color: #FF9147;
}

.swiper-button-next {
    color: #718096
}

.swiper-center {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  
.swiper-container {
    width: 100%; 
    height: 400px; 
}


.sample-slider .swiper-pagination-bullets .swiper-pagination{
    color: #FF9147;
    bottom: initial;
    top: 10px;
    
} */

.sticky-last > :last-child {
  position: sticky;
  top: 0;
}

.swiper-button-next,
.swiper-button-prev {
  background-color: #ADDCFF;
  /* background-color: rgba(255, 255, 255, 0.5); */
  right: 0px;
  padding: 25px;
  color: #008BF5 !important;
  fill: #008BF5  !important;
  border-radius: 50% !important;
  border: solid #008BF5;
}

.swiper-button-next::after,
.swiper-button-prev::after {
  font-size: 25px !important; 
}


:root {
  --swiper-navigation-size: 26px;
}

.swiper-contrainer {
  overflow: visible;
}

.swiper-custom-pagination {
  top: 30px;
  text-align: center;
  font-weight: bold;
  font-size: 1.3rem;
  z-index: 10;
  background-color: #62B7F8;
  margin-top: 4px;
  max-width: 5rem;
  margin-left: auto;
  margin-right: auto;
  border-radius: 10px;
}

